hphp/test/zend/good/tests-classes/type_hinting_002.php
<?php

class Foo {
	function a(NonExisting $foo) {}
}

$o = new Foo;
$o->a($o);
?>