hphp/test/zend/bad/zend-traits/bug60173.php
<?php

trait foo { }

$rc = new ReflectionClass('foo');
$rc->newInstance();
